--- a/Index.html
+++ b/Index.html
@@ -37,8 +37,9 @@
               Plots
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="data.html">Comparison</a>
-              
+            <a class="dropdown-item" href="data.html">Data</a>
+            <a class="dropdown-item" href="comparisons.html">comparison</a>
+        
             </div>
           </li>
           <li class="nav-item">
@@ -46,9 +47,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="data.html">Data</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="comparisons.html">Comparison</a>
           </li>
         </ul>
       </div>
