--- a/Index.html
+++ b/Index.html
@@ -39,6 +39,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="data.html">Data</a>
             <a class="dropdown-item" href="comparisons.html">comparison</a>
+            <a class="dropdown-item active" href="humidity.html">Humidity</a>
         
             </div>
           </li>
@@ -75,6 +76,34 @@
         <div class="box">
           <h5 class="title">Visualizations</h5>
           <hr>
+          <div class="container">
+            <div class="row" style="padding-bottom: 30px;">
+              <div class="col-6">
+                <a href="max_temperature.html">
+                  <img class="panel" src="/Users/Edo/Resources/Homework/Resources/assets/Images/Fig1.png" alt="Max Temperature Image">
+                </a>
+              </div>
+              <div class="col-6">
+                <a href="humidity.html">
+                  <img class="panel active" src="/Users/Edo/Resources/Homework/Resources/assets/Images/Fig2.png" alt="Humidity Graph">
+                </a>
+              </div>
+            </div>
+
+            <div class="row" style="padding-bottom: 30px;">
+              <div class="col-6">
+                <a href="cloudiness.html">
+                  <img class="panel" src="/Users/Edo/Resources/Homework/Resources/assets/Images/Fig3.png" alt="Cloudiness Graph">
+                </a>
+              </div>
+              <div class="col-6">
+                <a href="wind_speed.html">
+                  <img class="panel" src="/Users/Edo/Resources/Homework/Resources/assets/Images/Fig4.png" alt="Wind Speed Graph">
+                </a>
+              </div>
+
+            </div>
+          </div>
 
         </div>
       </div>
