--- a/cloudiness.html
+++ b/cloudiness.html
@@ -73,9 +73,6 @@
         <div class="box">
           <h5 class="title">Visualizations</h5>
           <hr>
-
-
-
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
@@ -113,7 +110,7 @@
   </div>
   <!-- Footer Section -->
   <footer>
-    <div class="footer">Data Science & Visualization Copyright © 2020 - All Rights Reserved</div>
+    <div class="footer">Data Science & Visualization TEC Bootcamp Copyright © 2020 - All Rights Reserved</div>
   </footer>
 
   <!-- Bootstrap CDN -->
