--- a/comparisons.html
+++ b/comparisons.html
@@ -97,7 +97,7 @@
 
   <!-- Footer-->
   <footer>
-    <div class="footer">Data Science & Visualization Copyright © 2020 - All Rights Reserved</div>
+    <div class="footer">Data Science & Visualization TEC Bootcamp Copyright © 2020 - All Rights Reserved</div>
   </footer>
 
   <!-- Bootstrap-->
