--- a/data.html
+++ b/data.html
@@ -6651,7 +6651,7 @@
   </div>
   <!-- Footer Section -->
   <footer>
-    <div class="footer">Data Science & Visualization Copyright © 2020 - All Rights Reserved</div>
+    <div class="footer">Data Science & Visualization TEC Bootcamp Copyright © 2020 - All Rights Reserved</div>
   </footer>
 
   <!-- Bootstrap CDN -->
