--- a/max_temperature.html
+++ b/max_temperature.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="Russ">
-  <title>Humidity</title>
-
+  <title>Maximum Temperature</title>
 
 
   <!-- Bootstrap CSS -->
@@ -25,7 +24,7 @@
   <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" style="background-color: #0BADA6;" href="Index.html">Latitude</a>
-      <button class="navbar-toggler  border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      <button class="navbar-toggler border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -37,8 +36,8 @@
               Plots
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="max_temperature.html">Max Temperature</a>
-              <a class="dropdown-item active" href="humidity.html">Humidity</a>
+              <a class="dropdown-item active" href="max_temperature.html">Max Temperature</a>
+              <a class="dropdown-item" href="humidity.html">Humidity</a>
               <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
               <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
               <a class="dropdown-item" href="comparisons.html">Comparison</a>
@@ -61,13 +60,13 @@
     <div class="row">
       <div class="col-lg-8 col-md-12">
         <!-- Left box  -->
-        <div class="box">
-          <h3 class="title">Humidity</h3>
+        <div class="box" style="padding-bottom: 5px;">
+          <h3 class="title">Max Temperature</h3>
           <hr>
-          <img src="/Users/Edo/Resources/Homework/Resources/assets/Images/Fig2.png" alt="Humidity Graph">
-          <p>Humidity does not show a strong correlation to latitude. The visualization shows a great variety of
-            humidity percentages at different latitudes. Therefore, we cannot conclude that there is a conclusive
-            pattern between humidity and latitude.</p>
+          <img src="Resources/assets/Images/Fig1.png" alt="Max Temperature Graph">
+          <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude).
+             More interestingly, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere.
+             This may be due to the tilt of the earth.</p>
         </div>
       </div>
       <div class="col-lg-4 col-md-12">
@@ -81,12 +80,12 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="max_temperature.html">
-                  <img class="panel" src="/Users/Edo/Resources/Homework/Resources/assets/Images/Fig1.png" alt="Max Temperature Image">
+                  <img class="panel active" src="Resources/assets/Images/Fig1.png" alt="Max Temperature Image">
                 </a>
               </div>
               <div class="col-6">
                 <a href="humidity.html">
-                  <img class="panel active" src="/Users/Edo/Resources/Homework/Resources/assets/Images/Fig2.png" alt="Humidity Graph">
+                  <img class="panel" src="Resources/assets/Images/Fig2.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
@@ -94,14 +93,15 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="cloudiness.html">
-                  <img class="panel" src="/Users/Edo/Resources/Homework/Resources/assets/Images/Fig3.png" alt="Cloudiness Graph">
+                  <img class="panel" src="Resources/assets/Images/Fig3.png" alt="Cloudiness Graph">
                 </a>
               </div>
               <div class="col-6">
                 <a href="wind_speed.html">
-                  <img class="panel" src="/Users/Edo/Resources/Homework/Resources/assets/Images/Fig4.png" alt="Wind Speed Graph">
+                  <img class="panel" src="Resources/assets/Images/Fig4.png" alt="Wind Speed Graph">
                 </a>
               </div>
+
 
             </div>
           </div>
@@ -113,7 +113,7 @@
   </div>
   <!-- Footer Section -->
   <footer>
-    <div class="footer"> Data Science & Visualization TEC Bootcamp Copyright © 2020 - All Rights Reserved</div>
+    <div class="footer">Data Science & Visualization TEC Bootcamp Copyright © 2020 - All Rights Reserved</div>
   </footer>
 
   <!-- Bootstrap CDN -->
