--- a/Index.html
+++ b/Index.html
@@ -37,9 +37,12 @@
               Plots
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="data.html">Data</a>
-            <a class="dropdown-item" href="comparisons.html">comparison</a>
-            <a class="dropdown-item active" href="humidity.html">Humidity</a>
+             <a class="dropdown-item" href="max_temperature.html">Max Temperature</a>
+              <a class="dropdown-item active" href="humidity.html">Humidity</a>
+              <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+              <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
+              <a class="dropdown-item" href="comparisons.html">Comparison</a>
+              <a class="dropdown-item" href="data.html">Data</a>
         
             </div>
           </li>
