--- a/comparisons.html
+++ b/comparisons.html
@@ -35,8 +35,9 @@
               aria-haspopup="true" aria-expanded="false" style="color: #6D8092">
               Plots
             </a>
-            <a class="dropdown-item" href="max_temperature.html">Max Temperature</a>
-              <a class="dropdown-item active" href="humidity.html">Humidity</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="max_temperature.html">Max Temperature</a>
+              <a class="dropdown-item" href="humidity.html">Humidity</a>
               <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
               <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
               <a class="dropdown-item" href="comparisons.html">Comparison</a>
